--- a/src/main/resources/templates/write-post.html
+++ b/src/main/resources/templates/write-post.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <meta charset="UTF-8"/>
     <title>post registration</title>
@@ -13,12 +13,18 @@
 </head>
 <body>
 <h1>포스트 등록</h1>
-<form>
+<div>
+    제목 : <input type="text" id="title"/>
+</div>
+<div id="tui-editor"></div>
+
+<div>
     <div>
-        제목 : <input type="text" id="title" name="title"/>
+        태그 : <input type="text" id="tags" placeholder=", 로 구분">
     </div>
-    <div id="editSection"></div>
-</form>
+</div>
+
+
 <button class="action" data-action="register">등록</button>
 
 <script src="/webjars/jquery/3.3.1-1/jquery.js"></script>
