--- a/src/main/resources/templates/write-post.html
+++ b/src/main/resources/templates/write-post.html
@@ -27,6 +27,7 @@
 
 <button class="action" data-action="register">등록</button>
 
+<!--lib-->
 <script src="/webjars/jquery/3.3.1-1/jquery.js"></script>
 
 <!--TUI editor-->
@@ -38,8 +39,10 @@
 <script src="/lib/tui/squire-rte/build/squire-raw.js"></script>
 <script src="/lib/tui/tui-editor/dist/tui-editor-Editor.js"></script>
 
+<!--my js-->
 <script src="/js/common.js"></script>
 <script src="/js/write-post.js"></script>
+
 </body>
 </html>
 
