프로필 조회 개발.

--- a/src/main/resources/templates/set-me.html
+++ b/src/main/resources/templates/set-me.html
@@ -14,10 +14,8 @@
     이메일 : <input type="text" id="email"/>
 </div>
 
-<div>
-    소개 : <input type="text" id="introduction"/>
-</div>
 기타정보 : <br>
+introduce: 개개발 <br>
 github: dodo4513@gmail.com <br>
 naver: xavier@naver.com <br>
 (하드코딩함)
