포스트 저장 api에 기타정보 추가, 방문 정보에 ip 추가

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -17,7 +17,7 @@
 <div>
     메뉴
     <div><a href="/admin/write-post">포스트 등록</a></div>
-    <div><a href="/admin/set-me">프로필 설정</a></div>
+    <div><a href="/admin/set-me">프로필 관리</a></div>
 </div>
 <!--lib-->
 <script src="/webjars/jquery/3.3.1-1/jquery.js"></script>
