방문수 카운팅에 캐시 적용, 구글 코드 스타일 스킴 적용

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -10,8 +10,9 @@
 <div>
     <div>전체 포스트 : <span id="totalPost"/></div>
     <div>최근 포스팅(1주) : <span id="postFor7Days"/></div>
-    <div>전체 방문자 : <span id="totalVisit"/></div>
-    <div>오늘 방문자 : <span id="todayVisit"/></div>
+    <div>누적 방문수 : <span id="totalVisit"/></div>
+    <div>오늘 방문수 : <span id="todayVisit"/></div>
+    <div>어제 방문수 : <span id="yesterdayVisit"/></div>
 </div>
 
 <div>
