--- a/src/main/resources/templates/post-list.html
+++ b/src/main/resources/templates/post-list.html
@@ -61,7 +61,8 @@
 
 <!--Local Stuff-->
 <script src="/js/common.js"></script>
-<script src="/js/post.js"></script>
+<script src="/js/grid-column.js"></script>
+<script src="/js/post-list.js"></script>
 
 </body>
 </html>
