--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -9,7 +9,7 @@
         <a class="navbar-brand hidden" href="./">
           <img src="/lib/Ela/images/logo2.png" alt="Logo"/>
         </a>
-        <a id="menuToggle" class="menutoggle"><i class="fa fa-bars"></i></a>
+        <!--<a id="menuToggle" class="menutoggle"><i class="fa fa-bars"></i></a>-->
       </div>
     </div>
     <div class="top-right">
