--- a/src/main/resources/templates/fragment/left-panel.html
+++ b/src/main/resources/templates/fragment/left-panel.html
@@ -44,12 +44,12 @@
             <!--<a href="/admin/post"> <i class="menu-icon ti-email"></i>포스트(미구현)</a>-->
           <!--</li>-->
 
-          <li class="menu-item-has-children dropdown" th:classappend="${activeId} == 'write-post' ? 'active' : ''">
+          <li class="menu-item-has-children dropdown" th:classappend="${activeId} == 'post' ? 'active' : ''">
             <a href="#" class="dropdown-toggle " data-toggle="dropdown" aria-haspopup="true"
                aria-expanded="false"> <i class="menu-icon fa fa-file-text"></i>포스트</a>
             <ul class="sub-menu children dropdown-menu">
               <li><i class="menu-icon fa fa-pencil"></i><a href="/admin/write-post">등록</a></li>
-              <li><i class="menu-icon fa fa-list-ol"></i><a href="/admin/post">리스트(개발중)</a></li>
+              <li><i class="menu-icon fa fa-list-ol"></i><a href="/admin/post-list">리스트(개발중)</a></li>
             </ul>
           </li>
 
