--- a/src/main/resources/templates/default-template.html
+++ b/src/main/resources/templates/default-template.html
@@ -3,6 +3,10 @@
 <head>
   <title>Ela Admin - HTML5 Admin Template</title>
   <th:block th:insert="fragment/ela-style-sheets.html :: ela-style-sheets"/>
+
+  <!--my-->
+  <link rel="stylesheet" type="text/css" href="/css/common.css"/>
+
 </head>
 
 <body>
