--- a/src/main/resources/templates/fragment/left-panel.html
+++ b/src/main/resources/templates/fragment/left-panel.html
@@ -49,7 +49,7 @@
                aria-expanded="false"> <i class="menu-icon fa fa-file-text"></i>포스트</a>
             <ul class="sub-menu children dropdown-menu">
               <li><i class="menu-icon fa fa-pencil"></i><a href="/admin/write-post">등록</a></li>
-              <li><i class="menu-icon fa fa-list-ol"></i><a href="/admin/post-list">리스트(개발중)</a></li>
+              <li><i class="menu-icon fa fa-list-ol"></i><a href="/admin/post-list">조회</a></li>
             </ul>
           </li>
 
