--- a/src/main/resources/templates/fragment/left-panel.html
+++ b/src/main/resources/templates/fragment/left-panel.html
@@ -52,9 +52,11 @@
               <li><i class="menu-icon fa fa-list-ol"></i><a href="/admin/post-list">조회</a></li>
             </ul>
           </li>
-
           <li>
             <a href="widgets.html"> <i class="menu-icon fa fa-align-left"></i>카테고리(미구현) </a>
+          </li>
+          <li>
+            <a href="widgets.html"> <i class="menu-icon fa fa-cog"></i>태그(미구현) </a>
           </li>
           <li>
             <a href="widgets.html"> <i class="menu-icon fa fa-bolt"></i>서식(미구현) </a>
