--- a/src/main/resources/templates/write-post.html
+++ b/src/main/resources/templates/write-post.html
@@ -107,9 +107,9 @@
                   <div class="col col-md-10">
                     <div class="form-check">
                       <div class="checkbox">
-                        <label for="checkbox1" class="form-check-label ">
-                          <input type="checkbox" id="checkbox1" name="checkbox1" value="option1"
-                                 class="form-check-input">공개(미구현)
+                        <label for="publicYn" class="form-check-label ">
+                          <input type="checkbox" id="publicYn" name="publicYn"
+                                 class="form-check-input">공개
                         </label>
                       </div>
                     </div>
