--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -74,3 +74,46 @@
   top: 0;
   position: fixed;
 }
+
+.must:after {
+  content: ' *';
+  color: red;
+  font-size: 15px
+}
+
+
+[data-tooltip-text]:hover {
+  position: relative;
+}
+
+[data-tooltip-text]:after {
+  transition: bottom .3s ease-in-out, opacity .3s ease-in-out;
+  box-shadow: 0px 0px 3px 1px rgba(50, 50, 50, 0.4);
+  background-color: rgba(0, 0, 0, 0.8);
+
+  border-radius: 5px;
+
+  color: #FFFFFF;
+  font-size: 12px;
+  margin-bottom: 10px;
+  padding: 7px 12px;
+  position: absolute;
+  width: 200px;
+  min-width: 50px;
+  max-width: 300px;
+  word-wrap: break-word;
+
+  z-index: 9999;
+
+  opacity: 0;
+  left: -9999px;
+  top: 90%;
+
+  content: attr(data-tooltip-text);
+}
+
+[data-tooltip-text]:hover:after {
+  top: 130%;
+  left: 0;
+  opacity: 1;
+}
