카테고리 API 프로토타입 개발

--- a/src/main/resources/templates/fragment/left-panel.html
+++ b/src/main/resources/templates/fragment/left-panel.html
@@ -43,7 +43,9 @@
           <!--<li>-->
             <!--<a href="/admin/post"> <i class="menu-icon ti-email"></i>포스트(미구현)</a>-->
           <!--</li>-->
-
+          <li>
+            <a href="category.html"> <i class="menu-icon fa fa-archive"></i>게시판</a>
+          </li>
           <li class="menu-item-has-children dropdown" th:classappend="${activeId} == 'post' ? 'active' : ''">
             <a href="#" class="dropdown-toggle " data-toggle="dropdown" aria-haspopup="true"
                aria-expanded="false"> <i class="menu-icon fa fa-file-text"></i>포스트</a>
