카테고리 관리 개발중

--- a/src/main/resources/static/css/tree.css
+++ b/src/main/resources/static/css/tree.css
@@ -5,8 +5,9 @@
 
 .tui-tree-input {
   height: 32px;
-  width: 200px;
-  margin-left: 100px;
+  width: 350px;
+  margin-left: 120px;
+  margin-top: 1px;
 }
 
 .tui-tree-text {
