--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -1,3 +1,7 @@
+.card {
+  min-height: 500px;
+}
+
 .input-style {
   border-radius: unset;
   height: 25px;
@@ -42,6 +46,12 @@
   padding-top: 4px;
   user-select: none;
   display: inline-block;
+}
+
+.common-small-btn {
+  font-size: 12px;
+  margin-left: 3px;
+  padding: 1px 6px;
 }
 
 .common-btn {
@@ -124,3 +134,6 @@
   opacity: 1;
 }
 
+.cancel-line {
+  text-decoration-line: line-through;
+}
