--- a/src/main/resources/templates/category-list.html
+++ b/src/main/resources/templates/category-list.html
@@ -31,7 +31,7 @@
       <!--<div id="tree"></div>-->
       <div class="row">
 
-        <div class="col-lg-12">
+        <div class="col-lg-10">
           <div class="card">
             <div class="card-header">
               <strong>카테고리</strong> 관리
@@ -39,28 +39,30 @@
             <div class="card-body card-block">
               <div class="row">
                 <div class="col-lg-6">
+                  <button id="addChildBtn" type="button" class="btn btn-primary common-small-btn action" data-action="addChild">추가</button>
+                  <button id="togglePublic" type="button" class="btn btn-secondary common-small-btn action" data-action="togglePublic">공개 전환</button>
+                  <button id="removeChildBtn" type="button" class="btn btn-danger common-small-btn action" data-action="removeChild">삭제</button>
                   <div id="tree" class="tui-tree-wrap"></div>
-                  <button id="addChildBtn" type="button" class="btn btn-primary common-btn action" data-action="addChild">추가</button>
-                  <button id="removeChildBtn" type="button" class="btn btn-secondary common-btn action" data-action="removeChild">삭제</button>
+                  <button id="save" type="button" class="btn btn-success common-small-btn action" data-action="save">저장</button>
                 </div>
-                <div class="col-lg-6">
-                  전체 펼치기
-                  전체 접기
-                  새글 표시 여부
-                  추가하기
-                  삭제하기
-                  <div class="explain">
+                <!--<div class="col-lg-6">-->
+                  <!--전체 펼치기-->
+                  <!--전체 접기-->
+                  <!--새글 표시 여부-->
+                  <!--추가하기-->
+                  <!--삭제하기-->
+                  <!--<div class="explain">-->
 
-                  </div>
-                </div>
+                  <!--</div>-->
+                <!--</div>-->
               </div>
             </div>
 
-            <div class="card-footer">
-              <button type="submit" class="btn btn-primary btn-sm action" data-action="register">
-                <i class="fa fa-dot-circle-o"></i> Submit
-              </button>
-            </div>
+            <!--<div class="card-footer">-->
+              <!--<button type="submit" class="btn btn-primary btn-sm action" data-action="register">-->
+                <!--<i class="fa fa-dot-circle-o"></i> Submit-->
+              <!--</button>-->
+            <!--</div>-->
 
           </div>
         </div>
