--- a/src/main/resources/templates/category-list.html
+++ b/src/main/resources/templates/category-list.html
@@ -40,21 +40,35 @@
               <div class="row">
                 <div class="col-lg-6">
                   <button id="addChildBtn" type="button" class="btn btn-primary common-small-btn action" data-action="addChild">추가</button>
-                  <button id="togglePublic" type="button" class="btn btn-secondary common-small-btn action" data-action="togglePublic">공개 전환</button>
+                  <button id="togglePublic" type="button" class="btn btn-info common-small-btn action" data-action="togglePublic">공개 전환</button>
                   <button id="removeChildBtn" type="button" class="btn btn-danger common-small-btn action" data-action="removeChild">삭제</button>
                   <div id="tree" class="tui-tree-wrap"></div>
                   <button id="save" type="button" class="btn btn-success common-small-btn action" data-action="save">저장</button>
                 </div>
-                <!--<div class="col-lg-6">-->
-                  <!--전체 펼치기-->
-                  <!--전체 접기-->
-                  <!--새글 표시 여부-->
-                  <!--추가하기-->
-                  <!--삭제하기-->
-                  <!--<div class="explain">-->
+                <div class="col-lg-6 text-left">
 
-                  <!--</div>-->
-                <!--</div>-->
+                  <div>
+                    <h3>카테고리</h3>
+                    <ol class="vue-ordered">
+                      <li>
+                        카테고리는
+                      </li>
+                      <li>The more traditional of these (1 and 2, below) relate to camouflage.</li>
+                      <li>The vertical striping may help the zebra hide in the grass by disrupting its outline.</li>
+                      <li>
+                        In addition, even at moderate distances, the striking striping merges to an apparent grey.
+                        <ul class="vue-list-inner">
+                          <li>However, the camouflage has been contested with arguments that most of a zebra's predator.
+                          </li>
+                          <li>Such as lions and hyenas cannot see well at a distance.</li>
+                          <li>More likely to have smelled or heard a zebra.</li>
+                        </ul>
+                      </li>
+                      <li>Before seeing it from a distance, especially at night.</li>
+                    </ol>
+                  </div>
+
+                </div>
               </div>
             </div>
 
