카테고리 포스트 이전 기능 추가.

--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -141,3 +141,13 @@
 .cancel-line {
   text-decoration-line: line-through;
 }
+
+.vue-ordered > li {
+  margin-top: 8px;
+}
+
+.disable-btn {
+  background-color: lightgray;
+  border: 0;
+  pointer-events: none;
+}
