--- a/src/main/resources/templates/write-post.html
+++ b/src/main/resources/templates/write-post.html
@@ -113,7 +113,7 @@
                 <div class="row form-group">
                   <div class="col col-md-2">
                     <label class=" form-control-label">추가 정보</label>
-                    <span data-tooltip-text="고정된 위 항목 외에도 자신에게 필요한 추가적인 정보를 포스트와 함께 저장할 수 있습니다. 이 정보는 포스트 조회 시 extraData로 반환됩니다."><i class="fa fa-question-circle"></i></span>
+                    <span data-tooltip-text="고정된 위 항목 외에도 필요한 추가 정보를 해당 포스트와 함께 저장할 수 있습니다. 이 정보는 포스트 조회 시 extraData로 반환됩니다."><i class="fa fa-question-circle"></i></span>
                   </div>
                   <div class="col col-md-10">
                     <div class="form-check">
